# assemblyTranslater

./: CMakeLists.txt  assembly.cpp  assembly.h  check_test_log.cpp  command.cpp  command.h  command_test.cpp  input2.txt  log.cpp  log.h  program.cpp  program.h  program_test.cpp  read.cpp  read.h  read_test.cpp
queue/: CMakeLists.txt  queue.h  tests.cpp
read/: CMakeLists.txt  read.cpp  read.h  read_test.cpp
